parser/y.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            |

   4  decl : name COLON type SEMICOLON
   5       | name COLON type ASSIGN expr SEMICOLON
   6       | name COLON type ASSIGN LBRACE stmt_list RBRACE

   7  name : IDENTIFIER

   8  type : INTEGER
   9       | BOOLEAN
  10       | CHAR
  11       | STRING
  12       | ARRAY LBRACKET opt_expr RBRACKET type
  13       | FUNCTION type LPAREN param_list RPAREN
  14       | VOID

  15  param_list : nonempty_param_list
  16             |

  17  nonempty_param_list : param COMMA nonempty_param_list
  18                      | param

  19  param : name COLON type

  20  stmt_list : stmt stmt_list
  21            |

  22  stmt : open_stmt
  23       | matched_stmt

  24  matched_stmt : IF LPAREN expr RPAREN matched_stmt ELSE matched_stmt
  25               | name COLON type SEMICOLON
  26               | name COLON type ASSIGN expr SEMICOLON
  27               | expr SEMICOLON
  28               | RETURN opt_expr SEMICOLON
  29               | PRINT expr_list SEMICOLON
  30               | FOR LPAREN opt_expr SEMICOLON opt_expr SEMICOLON opt_expr RPAREN matched_stmt
  31               | LBRACE stmt_list RBRACE

  32  open_stmt : IF LPAREN expr RPAREN stmt
  33            | IF LPAREN expr RPAREN matched_stmt ELSE open_stmt
  34            | FOR LPAREN opt_expr SEMICOLON opt_expr SEMICOLON opt_expr RPAREN open_stmt

  35  opt_expr_list : expr_list
  36                |

  37  expr_list : expr COMMA expr_list
  38            | expr

  39  opt_expr : expr
  40           |

  41  expr : assign_expr

  42  primary_expr : name
  43               | INTEGER_LITERAL
  44               | STRING_LITERAL
  45               | CHARACTER_LITERAL
  46               | TRUE
  47               | FALSE
  48               | LPAREN expr RPAREN
  49               | LBRACE expr_list RBRACE
  50               | name LPAREN opt_expr_list RPAREN
  51               | subscript_expr

  52  subscript_expr : subscript_expr LBRACKET expr RBRACKET
  53                 | name LBRACKET expr RBRACKET

  54  incr_expr : primary_expr INCREMENT
  55            | primary_expr DECREMENT
  56            | primary_expr

  57  negation_expr : MINUS incr_expr
  58                | NOT incr_expr
  59                | incr_expr

  60  exponent_expr : exponent_expr EXPONENT negation_expr
  61                | negation_expr

  62  mult_expr : mult_expr MULT exponent_expr
  63            | mult_expr DIVIDE exponent_expr
  64            | mult_expr MOD exponent_expr
  65            | exponent_expr

  66  add_expr : add_expr PLUS mult_expr
  67           | add_expr MINUS mult_expr
  68           | mult_expr

  69  comp_expr : comp_expr LT add_expr
  70            | comp_expr LE add_expr
  71            | comp_expr GT add_expr
  72            | comp_expr GE add_expr
  73            | comp_expr EQ add_expr
  74            | comp_expr NEQ add_expr
  75            | add_expr

  76  and_expr : and_expr AND comp_expr
  77           | comp_expr

  78  or_expr : or_expr OR and_expr
  79          | and_expr

  80  assign_expr : assign_expr ASSIGN or_expr
  81              | or_expr

state 0
	$accept : . program $end  (0)
	decl_list : .  (3)

	IDENTIFIER  shift 1
	$end  reduce 3

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	name  goto 5


state 1
	name : IDENTIFIER .  (7)

	.  reduce 7


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : .  (3)

	IDENTIFIER  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	name  goto 5


state 5
	decl : name . COLON type SEMICOLON  (4)
	decl : name . COLON type ASSIGN expr SEMICOLON  (5)
	decl : name . COLON type ASSIGN LBRACE stmt_list RBRACE  (6)

	COLON  shift 7
	.  error


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	decl : name COLON . type SEMICOLON  (4)
	decl : name COLON . type ASSIGN expr SEMICOLON  (5)
	decl : name COLON . type ASSIGN LBRACE stmt_list RBRACE  (6)

	ARRAY  shift 8
	BOOLEAN  shift 9
	CHAR  shift 10
	FUNCTION  shift 11
	INTEGER  shift 12
	STRING  shift 13
	VOID  shift 14
	.  error

	type  goto 15


state 8
	type : ARRAY . LBRACKET opt_expr RBRACKET type  (12)

	LBRACKET  shift 16
	.  error


state 9
	type : BOOLEAN .  (9)

	.  reduce 9


state 10
	type : CHAR .  (10)

	.  reduce 10


state 11
	type : FUNCTION . type LPAREN param_list RPAREN  (13)

	ARRAY  shift 8
	BOOLEAN  shift 9
	CHAR  shift 10
	FUNCTION  shift 11
	INTEGER  shift 12
	STRING  shift 13
	VOID  shift 14
	.  error

	type  goto 17


state 12
	type : INTEGER .  (8)

	.  reduce 8


state 13
	type : STRING .  (11)

	.  reduce 11


state 14
	type : VOID .  (14)

	.  reduce 14


state 15
	decl : name COLON type . SEMICOLON  (4)
	decl : name COLON type . ASSIGN expr SEMICOLON  (5)
	decl : name COLON type . ASSIGN LBRACE stmt_list RBRACE  (6)

	SEMICOLON  shift 18
	ASSIGN  shift 19
	.  error


state 16
	type : ARRAY LBRACKET . opt_expr RBRACKET type  (12)
	opt_expr : .  (40)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	RBRACKET  reduce 40

	name  goto 29
	opt_expr  goto 30
	expr  goto 31
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 17
	type : FUNCTION type . LPAREN param_list RPAREN  (13)

	LPAREN  shift 43
	.  error


state 18
	decl : name COLON type SEMICOLON .  (4)

	.  reduce 4


state 19
	decl : name COLON type ASSIGN . expr SEMICOLON  (5)
	decl : name COLON type ASSIGN . LBRACE stmt_list RBRACE  (6)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 44
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	expr  goto 45
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 20
	primary_expr : FALSE .  (47)

	.  reduce 47


state 21
	primary_expr : TRUE .  (46)

	.  reduce 46


state 22
	primary_expr : LPAREN . expr RPAREN  (48)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	expr  goto 46
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 23
	primary_expr : LBRACE . expr_list RBRACE  (49)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	expr_list  goto 47
	expr  goto 48
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 24
	negation_expr : MINUS . incr_expr  (57)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 49


state 25
	negation_expr : NOT . incr_expr  (58)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 50


state 26
	primary_expr : INTEGER_LITERAL .  (43)

	.  reduce 43


state 27
	primary_expr : CHARACTER_LITERAL .  (45)

	.  reduce 45


state 28
	primary_expr : STRING_LITERAL .  (44)

	.  reduce 44


state 29
	primary_expr : name .  (42)
	primary_expr : name . LPAREN opt_expr_list RPAREN  (50)
	subscript_expr : name . LBRACKET expr RBRACKET  (53)

	LPAREN  shift 51
	LBRACKET  shift 52
	RPAREN  reduce 42
	RBRACKET  reduce 42
	RBRACE  reduce 42
	COMMA  reduce 42
	SEMICOLON  reduce 42
	INCREMENT  reduce 42
	DECREMENT  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	EXPONENT  reduce 42
	MULT  reduce 42
	DIVIDE  reduce 42
	MOD  reduce 42
	LT  reduce 42
	LE  reduce 42
	GT  reduce 42
	GE  reduce 42
	EQ  reduce 42
	NEQ  reduce 42
	AND  reduce 42
	OR  reduce 42
	ASSIGN  reduce 42


state 30
	type : ARRAY LBRACKET opt_expr . RBRACKET type  (12)

	RBRACKET  shift 53
	.  error


state 31
	opt_expr : expr .  (39)

	.  reduce 39


state 32
	incr_expr : primary_expr . INCREMENT  (54)
	incr_expr : primary_expr . DECREMENT  (55)
	incr_expr : primary_expr .  (56)

	INCREMENT  shift 54
	DECREMENT  shift 55
	RPAREN  reduce 56
	RBRACKET  reduce 56
	RBRACE  reduce 56
	COMMA  reduce 56
	SEMICOLON  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56
	EXPONENT  reduce 56
	MULT  reduce 56
	DIVIDE  reduce 56
	MOD  reduce 56
	LT  reduce 56
	LE  reduce 56
	GT  reduce 56
	GE  reduce 56
	EQ  reduce 56
	NEQ  reduce 56
	AND  reduce 56
	OR  reduce 56
	ASSIGN  reduce 56


state 33
	primary_expr : subscript_expr .  (51)
	subscript_expr : subscript_expr . LBRACKET expr RBRACKET  (52)

	LBRACKET  shift 56
	RPAREN  reduce 51
	RBRACKET  reduce 51
	RBRACE  reduce 51
	COMMA  reduce 51
	SEMICOLON  reduce 51
	INCREMENT  reduce 51
	DECREMENT  reduce 51
	PLUS  reduce 51
	MINUS  reduce 51
	EXPONENT  reduce 51
	MULT  reduce 51
	DIVIDE  reduce 51
	MOD  reduce 51
	LT  reduce 51
	LE  reduce 51
	GT  reduce 51
	GE  reduce 51
	EQ  reduce 51
	NEQ  reduce 51
	AND  reduce 51
	OR  reduce 51
	ASSIGN  reduce 51


state 34
	negation_expr : incr_expr .  (59)

	.  reduce 59


state 35
	exponent_expr : negation_expr .  (61)

	.  reduce 61


state 36
	exponent_expr : exponent_expr . EXPONENT negation_expr  (60)
	mult_expr : exponent_expr .  (65)

	EXPONENT  shift 57
	RPAREN  reduce 65
	RBRACKET  reduce 65
	RBRACE  reduce 65
	COMMA  reduce 65
	SEMICOLON  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	MULT  reduce 65
	DIVIDE  reduce 65
	MOD  reduce 65
	LT  reduce 65
	LE  reduce 65
	GT  reduce 65
	GE  reduce 65
	EQ  reduce 65
	NEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	ASSIGN  reduce 65


state 37
	mult_expr : mult_expr . MULT exponent_expr  (62)
	mult_expr : mult_expr . DIVIDE exponent_expr  (63)
	mult_expr : mult_expr . MOD exponent_expr  (64)
	add_expr : mult_expr .  (68)

	MULT  shift 58
	DIVIDE  shift 59
	MOD  shift 60
	RPAREN  reduce 68
	RBRACKET  reduce 68
	RBRACE  reduce 68
	COMMA  reduce 68
	SEMICOLON  reduce 68
	PLUS  reduce 68
	MINUS  reduce 68
	LT  reduce 68
	LE  reduce 68
	GT  reduce 68
	GE  reduce 68
	EQ  reduce 68
	NEQ  reduce 68
	AND  reduce 68
	OR  reduce 68
	ASSIGN  reduce 68


state 38
	add_expr : add_expr . PLUS mult_expr  (66)
	add_expr : add_expr . MINUS mult_expr  (67)
	comp_expr : add_expr .  (75)

	PLUS  shift 61
	MINUS  shift 62
	RPAREN  reduce 75
	RBRACKET  reduce 75
	RBRACE  reduce 75
	COMMA  reduce 75
	SEMICOLON  reduce 75
	LT  reduce 75
	LE  reduce 75
	GT  reduce 75
	GE  reduce 75
	EQ  reduce 75
	NEQ  reduce 75
	AND  reduce 75
	OR  reduce 75
	ASSIGN  reduce 75


state 39
	comp_expr : comp_expr . LT add_expr  (69)
	comp_expr : comp_expr . LE add_expr  (70)
	comp_expr : comp_expr . GT add_expr  (71)
	comp_expr : comp_expr . GE add_expr  (72)
	comp_expr : comp_expr . EQ add_expr  (73)
	comp_expr : comp_expr . NEQ add_expr  (74)
	and_expr : comp_expr .  (77)

	LT  shift 63
	LE  shift 64
	GT  shift 65
	GE  shift 66
	EQ  shift 67
	NEQ  shift 68
	RPAREN  reduce 77
	RBRACKET  reduce 77
	RBRACE  reduce 77
	COMMA  reduce 77
	SEMICOLON  reduce 77
	AND  reduce 77
	OR  reduce 77
	ASSIGN  reduce 77


state 40
	and_expr : and_expr . AND comp_expr  (76)
	or_expr : and_expr .  (79)

	AND  shift 69
	RPAREN  reduce 79
	RBRACKET  reduce 79
	RBRACE  reduce 79
	COMMA  reduce 79
	SEMICOLON  reduce 79
	OR  reduce 79
	ASSIGN  reduce 79


state 41
	or_expr : or_expr . OR and_expr  (78)
	assign_expr : or_expr .  (81)

	OR  shift 70
	RPAREN  reduce 81
	RBRACKET  reduce 81
	RBRACE  reduce 81
	COMMA  reduce 81
	SEMICOLON  reduce 81
	ASSIGN  reduce 81


state 42
	expr : assign_expr .  (41)
	assign_expr : assign_expr . ASSIGN or_expr  (80)

	ASSIGN  shift 71
	RPAREN  reduce 41
	RBRACKET  reduce 41
	RBRACE  reduce 41
	COMMA  reduce 41
	SEMICOLON  reduce 41


state 43
	type : FUNCTION type LPAREN . param_list RPAREN  (13)
	param_list : .  (16)

	IDENTIFIER  shift 1
	RPAREN  reduce 16

	name  goto 72
	param_list  goto 73
	nonempty_param_list  goto 74
	param  goto 75


state 44
	decl : name COLON type ASSIGN LBRACE . stmt_list RBRACE  (6)
	primary_expr : LBRACE . expr_list RBRACE  (49)
	stmt_list : .  (21)

	FALSE  shift 20
	FOR  shift 76
	IF  shift 77
	PRINT  shift 78
	RETURN  shift 79
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 80
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	RBRACE  reduce 21

	stmt_list  goto 81
	stmt  goto 82
	matched_stmt  goto 83
	open_stmt  goto 84
	name  goto 85
	expr_list  goto 47
	expr  goto 86
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 45
	decl : name COLON type ASSIGN expr . SEMICOLON  (5)

	SEMICOLON  shift 87
	.  error


state 46
	primary_expr : LPAREN expr . RPAREN  (48)

	RPAREN  shift 88
	.  error


state 47
	primary_expr : LBRACE expr_list . RBRACE  (49)

	RBRACE  shift 89
	.  error


state 48
	expr_list : expr . COMMA expr_list  (37)
	expr_list : expr .  (38)

	COMMA  shift 90
	RPAREN  reduce 38
	RBRACE  reduce 38
	SEMICOLON  reduce 38


state 49
	negation_expr : MINUS incr_expr .  (57)

	.  reduce 57


state 50
	negation_expr : NOT incr_expr .  (58)

	.  reduce 58


state 51
	primary_expr : name LPAREN . opt_expr_list RPAREN  (50)
	opt_expr_list : .  (36)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	RPAREN  reduce 36

	name  goto 29
	opt_expr_list  goto 91
	expr_list  goto 92
	expr  goto 48
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 52
	subscript_expr : name LBRACKET . expr RBRACKET  (53)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	expr  goto 93
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 53
	type : ARRAY LBRACKET opt_expr RBRACKET . type  (12)

	ARRAY  shift 8
	BOOLEAN  shift 9
	CHAR  shift 10
	FUNCTION  shift 11
	INTEGER  shift 12
	STRING  shift 13
	VOID  shift 14
	.  error

	type  goto 94


state 54
	incr_expr : primary_expr INCREMENT .  (54)

	.  reduce 54


state 55
	incr_expr : primary_expr DECREMENT .  (55)

	.  reduce 55


state 56
	subscript_expr : subscript_expr LBRACKET . expr RBRACKET  (52)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	expr  goto 95
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 36
	mult_expr  goto 37
	add_expr  goto 38
	comp_expr  goto 39
	and_expr  goto 40
	or_expr  goto 41
	assign_expr  goto 42


state 57
	exponent_expr : exponent_expr EXPONENT . negation_expr  (60)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 96


state 58
	mult_expr : mult_expr MULT . exponent_expr  (62)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 97


state 59
	mult_expr : mult_expr DIVIDE . exponent_expr  (63)

	FALSE  shift 20
	TRUE  shift 21
	LPAREN  shift 22
	LBRACE  shift 23
	MINUS  shift 24
	NOT  shift 25
	IDENTIFIER  shift 1
	INTEGER_LITERAL  shift 26
	CHARACTER_LITERAL  shift 27
	STRING_LITERAL  shift 28
	.  error

	name  goto 29
	primary_expr  goto 32
	subscript_expr  goto 33
	incr_expr  goto 34
	negation_expr  goto 35
	exponent_expr  goto 98


state 60
	mult_expr : mult_expr MOD . exponent_expr  (64)
